---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2023-01-30
  Bugfixes:
    - Fixed that technology slot tooltips would only show the base unit count for multilevel techs
    - Fixed that the GUI would not refresh if the player's force is changed
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2023-01-14
  Bugfixes:
    - Fixed that queueing to the front would remove the active research from the queue
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-01-10
  Bugfixes:
    - Fixed that a technology's descendants would be removed when research was completed
    - Fixed that multi-level technology tooltips did not update when the level changed
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2022-12-30
  Changes:
    - Renamed "requisite" to "descendant" - requisite was not a valid word for the context
  Bugfixes:
    - Fixed a memory leak and infinite loop when migrating with an infinite technology in the queue
    - Fixed several bugs related to hidden and disabled technologies being changed at runtime
    - Fixed that disabled technologies would always be shown in the tech info panel
    - Fixed that you were able to queue disabled technologies
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2022-12-21
  Bugfixes:
    - Fixed a crash when queuing to front a technology with no prerequisites
    - Fixed that clicking the "open in graph" button without a technology selected would do nothing