@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed that hidden technologies would be visible when researched (#1)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: 2023-01-30
